<resources>
    <string name="app_name">Motion Path</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_home">Главная</string>
    <string name="title_exercise">Упражнения</string>
    <string name="title_create_exercise">Создать упражнение</string>
    <string name="title_clients">Клиенты</string>
    <string name="title_profile">Профиль</string>
    <string name="title_create_session">Создать тренировку</string>

    <string name="edit">Изменить</string>

    <string name="main_add_session">Добавить</string>

    <string name="menu_session_edit">Edit</string>
    <string name="menu_session_notification">Enable notification</string>
    <string name="menu_session_delete">Delete</string>
    <string name="menu_session_change_date">Change date and time</string>

    <string name="name_pattern">%1$s %2$s</string>

    <string name="create_session_edittext_hint_name">ФИО</string>
    <string name="create_session_edittext_hint_date">Дата</string>
    <string name="create_session_edittext_hint_time">Начало</string>
    <string name="create_session_edittext_hint_time_end">Конец</string>
    <string name="create_session_edittext_hint_description">Описание</string>
    <string name="create_session_edittext_hint_goal">Цель</string>
    <string name="create_session_exercise">Добавить упражнение</string>

    <string name="create_train_client_info_title">О клиенте</string>
    <string name="create_train_client_info_collapse">Свернуть</string>
    <string name="create_train_client_info_expand">Развернуть</string>
    <string name="create_train_previous_trains_title">Последние тренировки</string>

    <string name="exercises_count_pattern">%1$d упражнений</string>

    <string name="action_save">Сохранить</string>

    <string name="weight">Вес (кг)</string>

    <string name="count">Повторы</string>

    <string name="category_name_personal">Персоналки</string>
    <string name="category_name_temp">Пробные</string>
    <string name="category_name_default">Все клиенты</string>
    <string name="category_name_out">Выбыли</string>
    <string name="category_name_paused">Перерыв</string>

    <string name="mock_exercise_1">Спина</string>
    <string name="mock_exercise_2">Плечи</string>
    <string name="mock_exercise_3">Грудь</string>
    <string name="mock_exercise_4">Руки</string>
    <string name="mock_exercise_5">Живот</string>
    <string name="mock_exercise_6">Таз</string>
    <string name="mock_exercise_7">Бедро</string>
    <string name="mock_exercise_8">Голень</string>
    <string name="mock_exercise_9">Шея</string>

    <string name="mock_exercise_muscle_1_1">Мышца 1</string>
    <string name="mock_exercise_muscle_1_2">Мышца 2</string>
    <string name="mock_exercise_muscle_1_3">Мышца 3</string>

    <string name="mock_exercise_1_1">Становая тяга</string>
    <string name="mock_exercise_1_2">Наклоны со штангой стоя</string>
    <string name="mock_exercise_1_3">Тяга штанги на прямых ногах</string>
    <string name="mock_exercise_1_4">Наклоны со штангой сидя</string>
    <string name="mock_exercise_1_5">Геперэкстензия</string>
    <string name="mock_exercise_1_6">Экстензия</string>

</resources>